welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:39: error: illegal start of simple expression
		for (j <- 1 to 7);
                                 ^